* more unit tests * fixed multithreading problem in DefaultWiringContext